# ariadna

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  devbox.json  diagram.json  justfile  rust-toolchain.toml  rustfmt.toml  treefmt.toml  wokwi.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  scorecard.yaml  scorecard.yml
ariadna/: Cargo.toml  justfile
ariadna/src/: main.rs
chips/: justfile
chips/gnss-emulator/: Cargo.toml  build.rs  chip.json  deny.toml  justfile
chips/gnss-emulator/.cargo/: config.toml
chips/gnss-emulator/src/: lib.rs  wokwi.rs
firmware/: justfile
firmware/ariadna/: Cargo.toml  deny.toml  justfile  sdkconfig.defaults  wokwi.toml
firmware/ariadna/src/: app_module.rs  event.rs  main.rs
firmware/ariadna/src/core/: event.rs  mod.rs  state.rs
firmware/ariadna/src/core/event_loop_service/: error.rs  interface.rs  mock_service.rs  mod.rs  service.rs
firmware/ariadna/src/core/main_service/: error.rs  interface.rs  mod.rs  service.rs
firmware/ariadna/src/esp32/: mod.rs
firmware/ariadna/src/esp32/halt_service/: interface.rs  mock_service.rs  service.rs
firmware/ariadna/src/esp32/initialize_service/: mock_service.rs  service.rs
firmware/ariadna/src/gnss/: mod.rs
firmware/ariadna/src/gnss/monitor_service/: interface.rs  mock_service.rs  service.rs
firmware/ariadna/src/gnss/uart_service/: error.rs  interface.rs  mock_service.rs  mod.rs  no_op_service.rs  service.rs
firmware/ariadna/src/services/: esp32_service.rs  event_loop_service.rs  main_service.rs  mod.rs
firmware/ariadna/src/utils/: mod.rs
firmware/ariadna/src/utils/display_service/: color.rs  error.rs  interface.rs  mock_service.rs  mod.rs  no_op_service.rs  service.rs
firmware/ariadna/src/utils/introspect_state_service/: interface.rs  mock_service.rs  mod.rs  service.rs
firmware/ariadna/src/utils/log_service/: interface.rs  mock_service.rs  service.rs
firmware/poc/: Cargo.toml  diagram.json  justfile  wokwi.toml
openspec/changes/add-unit-tests/: design.md  proposal.md  tasks.md
openspec/changes/esp32-service/: tasks.md
openspec/changes/gnss-position-tracking/: proposal.md  tasks.md
openspec/changes/hardware-bom/: design.md  proposal.md  tasks.md
openspec/changes/init-ariadna-project/: design.md  tasks.md
openspec/specs/esp32-build/: spec.md
openspec/specs/event-loop/: spec.md
openspec/specs/gnss-tracking/: spec.md
openspec/specs/hardware/: bom.md
openspec/specs/introspect-state/: spec.md
openspec/specs/local-testing/: spec.md
openspec/specs/project-structure/: spec.md
openspec/specs/uart-abstraction/: spec.md
openspec/specs/unit-testing/: spec.md
(+29 files in other folders)
