[workspace]
members = ["chips/gnss-emulator", "firmware/ariadna"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Igor Sidorov"]
repository = "https://github.com/binarycode/ariadna"
description = "Simple navigation gadget"
readme = "README.md"

[profile.release]
lto = true

[profile.release.package.gnss-emulator]
opt-level = "s"
