[package]
name = "ariadna"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
log = "0.4"

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-idf-svc = { version = "0.51", features = [
  "critical-section",
  "embassy-sync",
] }
esp-idf-hal = "0.45"
esp-idf-sys = { version = "0.36", features = ["binstart"] }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
