[package]
name = "ariadna"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
log = "0.4"
shaku = "0.6"
thiserror = "1.0"
nmea = "0.7"

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-idf-svc = { version = "0.51", features = [
  "critical-section",
  "embassy-sync",
] }
esp-idf-hal = "0.45"
esp-idf-sys = { version = "0.36", features = ["binstart"] }
embedded-io-adapters = { version = "0.6", features = ["std"] }

[dev-dependencies]
mockall = { version = "0.14", features = ["nightly"] }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
